--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
+
 }
 
 android {
@@ -64,4 +66,11 @@ dependencies {
 
     implementation "androidx.fragment:fragment-ktx:1.5.5"
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+
+
+    implementation 'com.google.dagger:hilt-android-gradle-plugin:2.44'
+    implementation 'com.google.dagger:hilt-android:2.38.1'
+    kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+
 }
